--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+REACT_APP_API_BASE_URL=https://e-commerce-backend-xqxl.onrender.com
 
-REACT_APP_GOOGLE_CLIENT_ID=403041238553-df8c14tupe6bpis579isic15711qet5t.apps.googleusercontent.com
+REACT_APP_GOOGLE_CLIENT_ID=403041238553-df8c14tupe6bpis579isic15711qet5t.apps.googleusercontent.com 
